subo mierda grande

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reventa de Bombillas - Iberdrola</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Reventa de Bombillas</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="productos scrollbar-contenedor">
+            <article class="producto">
+                <img src="bombilla1.jpg" alt="Bombilla LED">
+                <h2>Bombilla LED 10W</h2>
+                <p>Alta eficiencia energética</p>
+                <button>Comprar</button>
+            </article>
+            <article class="producto">
+                <img src="bombilla2.jpg" alt="Bombilla Bajo Consumo">
+                <h2>Bombilla Bajo Consumo 15W</h2>
+                <p>Ahorro garantizado</p>
+                <button>Comprar</button>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Iberdrola - Reventa de Bombillas</p>
+        <div class="social-icons">
+            <div class="social-icon"><img src="icon1.png" alt="Social 1"></div>
+            <div class="social-icon2"><img src="icon2.png" alt="Social 2"></div>
+        </div>
+    </footer>
 </body>
 </html>
