--- a/html/productos.html
+++ b/html/productos.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reventa de Bombillas - Tienda Online</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Reventa de Bombillas - Productos</title>
+  <link rel="stylesheet" href="../css/styleproducto.css">
   <!-- Fuente Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -62,6 +62,39 @@
       <img src="img/header1.jpg" alt="Iluminación moderna">
     </section>
 
+    <!-- Sección de productos -->
+    <section id="productos" class="productos">
+      <h2>Nuestros Productos</h2>
+      <div class="producto-grid">
+        <article class="producto">
+          <img src="img/bombilla_05W.jpg" alt="Bombilla LED 5W">
+          <h3>Bombilla LED 5W</h3>
+          <p>Alta eficiencia y larga duración.</p>
+        </article>
+        <article class="producto">
+          <img src="img/bombilla_08W.jpg" alt="Bombilla LED 8W">
+          <h3>Bombilla LED 8W</h3>
+          <p>Ideal para iluminar cualquier espacio.</p>
+        </article>
+        <article class="producto">
+          <img src="img/bombilla_10W.jpg" alt="Bombilla LED 10W">
+          <h3>Bombilla LED 10W</h3>
+          <p>Potente y eficiente.</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- Sección de promociones / anuncios -->
+    <section id="promociones" class="promociones">
+      <h2>Promociones</h2>
+      <div class="anuncio">
+        <img src="img/bombilla_12W.jpg" alt="Promoción Especial">
+        <div class="detalle-anuncio">
+          <h3>Promoción Especial</h3>
+          <p>Compra 3 y llévate 1 gratis. Oferta por tiempo limitado.</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- Pie de página -->
