--- a/html/promociones.html
+++ b/html/promociones.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reventa de Bombillas - Tienda Online</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>Reventa de Bombillas - Promociones</title>
+  <link rel="stylesheet" href="../css/styleproducto.css">
   <!-- Fuente Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,7 @@
   <main>
     <!-- Sección de bienvenida / hero -->
     <section id="inicio" class="hero">
-      <h2>Bienvenido a la Tienda Online de Bombillas</h2>
+      <h2>¡Las mejores promociones!</h2>
       <p>Descubre la mejor calidad y precios para iluminar tu hogar y negocio.</p>
       <img src="img/header1.jpg" alt="Iluminación moderna">
     </section>
