--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,6 +6,7 @@
   <title>Reventa de Bombillas - Contacto</title>
   <link rel="stylesheet" href="../css/stylecontacto.css">
   <!-- Fuente Google Fonts -->
+  <link rel="shortcut icon" href="../img/icono.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -14,7 +15,7 @@
   <!-- Encabezado y navegación -->
   <header>
     <div class="logo">
-      <h1>Reventa de Bombillas - Iberdrola</h1>
+      <img src="../img/logoIber.svg" alt="Logo Iberdrola">
     </div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">
@@ -64,14 +65,16 @@
         <h3>Síguenos en redes sociales</h3>
         <a href="https://x.com/iberdrola" target="_blank">X</a> |
         <a href="https://www.facebook.com/Iberdrola" target="_blank">Facebook</a> |
-        <a href="https://instagram.com/iberdrola" target="_blank">Instagram</a>
+        <a href="https://instagram.com/iberdrola" target="_blank">Instagram</a>|
+        <a href="https://www.youtube.com/@IberdrolaClientesES" target="_blank">YouTube</a>
       </div>
     </section>
   </main>
   
-  <!-- Pie de página -->
-  <footer>
-    <p>&copy; 2025 Reventa de Bombillas. Todos los derechos reservados.</p>
+   <!-- Pie de página -->
+   <footer>
+    <img class="footer" src="../img/IberdrolaLanding.svg" alt="Imagen 6">
+    <p>&copy; 2025 Iberdrola Clientes S.A.U. Todos los derechos reservados.</p>
   </footer>
   
   <script>
