--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Reventa de Bombillas - Tienda Online</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- Fuente Google Fonts -->
+  <link rel="shortcut icon" href="img/icono.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -14,7 +15,8 @@
   <!-- Encabezado y navegación -->
   <header>
     <div class="logo">
-      <h1>Reventa de Bombillas - Iberdrola</h1>
+      <img src="img/logoIber.svg" alt="Logo Iberdrola">
+
     </div>
     <!-- Checkbox oculto para controlar el menú lateral -->
     <input type="checkbox" id="menu-toggle">
@@ -53,20 +55,75 @@
     </div>
   </section>
 
-  <!-- Contenido principal -->
   <main>
     <!-- Sección de bienvenida / hero -->
     <section id="inicio" class="hero">
-      <h2>Bienvenido a la Tienda Online de Bombillas</h2>
-      <p>Descubre la mejor calidad y precios para iluminar tu hogar y negocio.</p>
-      <img src="img/header1.jpg" alt="Iluminación moderna">
+      <h2>Iberdrola, liderando el futuro de la energía renovable</h2>
+      <p>Comprometidos con un mundo más verde y sostenible.</p>
+      <div class="image-container">
+        <img class="image" src="../img/header1.jpg" alt="Imagen 1">
+        <img class="image" src="../img/header2.jpg" alt="Imagen 2">
+        <img class="image" src="../img/header3.jpg" alt="Imagen 3">
+        <img class="image" src="../img/header4.jpg" alt="Imagen 4">
+        <img class="image" src="../img/header5.jpg" alt="Imagen 5">
+        <img class="image" src="../img/header6.jpg" alt="Imagen 6">
+      </div>
+    </section>
+
+    <section class="commitment">
+      <div class="container">
+          <h2 class="section-title">Compromiso Ambiental de Iberdrola</h2>
+          <p class="intro-text">Iberdrola, líder en energías renovables, cumple con diversas normativas ambientales nacionales e internacionales, garantizando operaciones responsables y sostenibles.</p>
+
+          <div class="features">
+              <div class="feature">
+                  <h3 class="feature-title">Normativas Europeas y Españolas</h3>
+                  <p class="feature-text">Cumplimos con leyes clave como la Directiva Europea sobre Energías Renovables y la Ley de Cambio Climático en España, que promueven el uso de energías limpias y la reducción de emisiones.</p>
+              </div>
+              <div class="feature">
+                  <h3 class="feature-title">Compromiso con el Cambio Climático</h3>
+                  <p class="feature-text">Iberdrola se ajusta al Acuerdo de París y tiene un plan de descarbonización para lograr la neutralidad en carbono para 2050.</p>
+              </div>
+              <div class="feature">
+                  <h3 class="feature-title">Certificaciones Ambientales</h3>
+                  <p class="feature-text">Contamos con la certificación ISO 14001, que asegura el cumplimiento de los más altos estándares de gestión ambiental.</p>
+              </div>
+              <div class="feature">
+                  <h3 class="feature-title">Energías Renovables</h3>
+                  <p class="feature-text">Nos adherimos a normativas específicas en proyectos de energía eólica y solar, garantizando un impacto mínimo en los ecosistemas locales.</p>
+              </div>
+              <div class="feature">
+                  <h3 class="feature-title">Gestión de Residuos y Agua</h3>
+                  <p class="feature-text">Cumplimos con la Ley de Residuos y Suelos Contaminados y gestionamos los recursos hídricos de manera eficiente en nuestras plantas hidroeléctricas.</p>
+              </div>
+              <div class="feature">
+                  <h3 class="feature-title">Biodiversidad y Ecosistemas</h3>
+                  <p class="feature-text">Realizamos evaluaciones ambientales exhaustivas para proteger la biodiversidad y minimizar impactos en el entorno natural.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+    <section id="inicio" class="hero">
+      <h2>¿Sabías que las piezas de los aerogeneradores se pueden reciclar?</h2>
+      <p>La <span>#EconomíaCircular</span> es clave para un futuro sostenible con el que ganemos <span>TODOS</span>.</p>
+      <video id="videoHero" controls playsinline style="width: 100%; height: auto; object-fit: cover;">
+        <source src="video/iberdrolaintro.mp4" type="video/mp4">
+        Tu navegador no soporta el elemento video.
+      </video>
     </section>
 
   </main>
+  
+  
+  
+  
 
   <!-- Pie de página -->
   <footer>
-    <p>&copy; 2025 Reventa de Bombillas. Todos los derechos reservados.</p>
+    <img class="footer" src="img/IberdrolaLanding.svg" alt="Imagen 6">
+    <p>&copy; 2025 Iberdrola Clientes S.A.U. Todos los derechos reservados.</p>
+    
   </footer>
 </body>
 </html>
