--- a/html/contacto.html
+++ b/html/contacto.html
@@ -26,9 +26,9 @@
     <nav class="desktop-menu">
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../html/productos.html">Productos</a></li>
-        <li><a href="../html/promociones.html">Promociones</a></li>
-        <li><a href="../html/contacto.html">Contacto</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="promociones.html">Promociones</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -44,9 +44,9 @@
   <nav class="side-menu">
     <ul>
       <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../html/productos.html">Productos</a></li>
-      <li><a href="../html/promociones.html">Promociones</a></li>
-      <li><a href="../html/contacto.html">Contacto</a></li>
+      <li><a href="productos.html">Productos</a></li>
+      <li><a href="promociones.html">Promociones</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
   
