--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- Menú de escritorio -->
     <nav class="desktop-menu">
       <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../html/productos.html">Productos</a></li>
-        <li><a href="../html/promociones.html">Promociones</a></li>
-        <li><a href="../html/contacto.html">Contacto</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="html/productos.html">Productos</a></li>
+        <li><a href="html/promociones.html">Promociones</a></li>
+        <li><a href="html/contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -41,10 +41,10 @@
   <!-- Menú lateral para móviles -->
   <nav class="side-menu">
     <ul>
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../html/productos.html">Productos</a></li>
-      <li><a href="../html/promociones.html">Promociones</a></li>
-      <li><a href="../html/contacto.html">Contacto</a></li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="html/productos.html">Productos</a></li>
+      <li><a href="html/promociones.html">Promociones</a></li>
+      <li><a href="html/contacto.html">Contacto</a></li>
     </ul>
   </nav>
 
@@ -61,12 +61,12 @@
       <h2>Iberdrola, liderando el futuro de la energía renovable</h2>
       <p>Comprometidos con un mundo más verde y sostenible.</p>
       <div class="image-container">
-        <img class="image" src="../img/header1.jpg" alt="Imagen 1">
-        <img class="image" src="../img/header2.jpg" alt="Imagen 2">
-        <img class="image" src="../img/header3.jpg" alt="Imagen 3">
-        <img class="image" src="../img/header4.jpg" alt="Imagen 4">
-        <img class="image" src="../img/header5.jpg" alt="Imagen 5">
-        <img class="image" src="../img/header6.jpg" alt="Imagen 6">
+        <img class="image" src="img/header1.jpg" alt="Imagen 1">
+        <img class="image" src="img/header2.jpg" alt="Imagen 2">
+        <img class="image" src="img/header3.jpg" alt="Imagen 3">
+        <img class="image" src="img/header4.jpg" alt="Imagen 4">
+        <img class="image" src="img/header5.jpg" alt="Imagen 5">
+        <img class="image" src="img/header6.jpg" alt="Imagen 6">
       </div>
     </section>
 
