--- a/html/productos.html
+++ b/html/productos.html
@@ -85,7 +85,7 @@
         <article class="producto">
           <img src="../img/bombilla_03W.png" alt="Bombilla LED G9 3W">
           <h3>Bombilla LED G9 3W</h3>
-          <p>Ideal para lámparas decorativas y de ambiente.</p>
+          <p>Perfecto para luces ornamentales</p>
           <div class="button-container">
             <!-- Botón para abrir el modal -->
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProducto1">
@@ -197,7 +197,7 @@
         <article class="producto">
           <img src="../img/bombilla_08W.png" alt="Bombilla Solar LED 8W">
           <h3>Bombilla Solar LED 8W</h3>
-          <p>Recargable con energía solar, sin consumo eléctrico.</p>
+          <p>Funciona con energía solar</p>
           <div class="button-container">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProducto4">
               Más Información
@@ -373,7 +373,7 @@
         <article class="producto">
           <img src="../img/bombilla_20W.png" alt="Bombilla LED E27 20W">
           <h3>Bombilla LED E27 20W</h3>
-          <p>Alto brillo para exteriores y grandes espacios.</p>
+          <p>Iluminación potente para áreas exteriores.</p>
           <div class="button-container">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProducto6">
               Más Información
